--- a/force-app/main/default/classes/OpportunityHelper.cls
+++ b/force-app/main/default/classes/OpportunityHelper.cls
@@ -18,8 +18,7 @@ public with sharing class OpportunityHelper {
                 if(accounts.get(opp.AccountId).Industry == 'Banking'){
                     opp.addError('Cannot delete closed opportunity');
                 }    
-            }
-            
+            }    
         }
     }
 
@@ -56,4 +55,92 @@ public with sharing class OpportunityHelper {
         }
     }
 
+    public static void insertTask (List<Opportunity> newOpps) {
+        List<Task> tasksToInsert = new List<Task>();
+            for (Opportunity opp : newOpps){
+                Task tsk = new Task();
+                tsk.Subject = 'Call Primary Contact';
+                tsk.WhatId = opp.Id;
+                tsk.WhoId = opp.Primary_Contact__c;
+                tsk.OwnerId = opp.OwnerId;
+                tsk.ActivityDate = Date.today().addDays(3); 
+                tasksToInsert.add(tsk);
+            }
+            insert tasksToInsert;
+    }
+
+    public static void updateDescriptionFromStage (List<Opportunity> newOppList, Map<Id, Opportunity> oldOppMap) {
+        List<Opportunity> oppsToUpdate = new List<Opportunity>();
+
+        for (Opportunity opp : newOppList){
+            Opportunity oldOpp = oldOppMap.get(opp.Id); 
+            if (opp.StageName != null && !opp.StageName.equals(oldOpp.StageName)){
+                Opportunity oppToUpdate = opp.clone(false, true);
+                oppToUpdate.Id = opp.Id;
+                oppToUpdate.Description += '\n Stage Change:' + opp.StageName + ':' + DateTime.now().format();
+                oppsToUpdate.add(oppToUpdate);
+            }
+                            
+        }
+        update oppsToUpdate;
+    }
+
+    public static void notifyOwnersOpportunityDeleted (List<Opportunity> opps) {
+        Set<Id> userIdsFromOpp = new Set<Id>();
+        for (Opportunity opp : opps) {
+            if (opp.OwnerId != null) {
+                userIdsFromOpp.add(opp.OwnerId);
+            }
+        }
+
+        if (!userIdsFromOpp.isEmpty()) {
+            Map<Id, User> userFromOpp = new Map<Id, User>([SELECT Id, Email FROM User WHERE Id IN :userIdsFromOpp]);
+            List<Messaging.SingleEmailMessage> mails = new List<Messaging.SingleEmailMessage>();
+            for (Opportunity opp : opps) { 
+                if (opp.OwnerId != null && userFromOpp.containsKey(opp.OwnerId)) {
+                    User owner = userFromOpp.get(opp.OwnerId);
+                    if (owner.Email != null) {
+                        Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
+                        String[] toAddresses = new String[] { owner.Email };
+                        mail.setToAddresses(toAddresses);
+                        mail.setSubject('Opportunity Deleted : ' + opp.Name);
+                        mail.setPlainTextBody('Your Opportunity: ' + opp.Name + ' has been deleted.');
+                        mails.add(mail);    
+                    } 
+                } 
+            }
+            
+            try {
+                if (!mails.isEmpty()) {
+                    Messaging.sendEmail(mails);
+                }
+            } catch (Exception e) {
+                System.debug('Exception: ' + e.getMessage());
+            }
+        } 
+    }
+
+    public static void assignPrimaryContact(Map<Id,Opportunity> oppNewMap) {        
+        Set<Id> oppAccountIds = new Set<Id>();
+        for (Opportunity opp : oppNewMap.values()){
+            oppAccountIds.add(opp.AccountId);
+        }
+
+        Map<Id, Account> accMap = new Map<Id, Account>(
+            [SELECT Id, Name,
+                (SELECT Id FROM Contacts WHERE Title = 'VP Sales') 
+            FROM Account 
+            WHERE Id IN :oppAccountIds]
+        );
+        
+        Map<Id, Opportunity> oppMap = new Map<Id, Opportunity>();
+        for (Opportunity opp : oppNewMap.values()){            
+            if (opp.Primary_Contact__c == null && !accMap.get(opp.AccountId).Contacts.isEmpty()){
+                Opportunity oppToUpdate = new Opportunity(Id = opp.Id);
+                oppToUpdate.Primary_Contact__c = accMap.get(opp.AccountId).Contacts[0].Id;
+                oppMap.put(opp.Id, oppToUpdate);
+            }
+        }
+        update oppMap.values();
+    }
 }
